# bert-lambda-example

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  localstack-setup.sh
.github/workflows/: cd.yml  ci.yml
app/: .env  pyproject.toml
app/app/: inference.py  main.py
app/tests/: fixtures.py  test_main.py
cdk/: package-lock.json
cdk/lib/: bert-lambda-stack.ts
