[project]
name = ""
version = ""
description = ""
authors = [
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
main = [
    "boto3>=1.22.9",
    "transformers>=4.18.0",
    "torch>=1.11.0",
]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "python-dotenv>=0.20.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = { shell = "pytest tests" }